tests/baselines/reference/requireOfAnEmptyFile1.errors.txt
tests/cases/compiler/requireOfAnEmptyFile1_a.ts(3,21): error TS2306: File 'tests/cases/compiler/requireOfAnEmptyFile1_b.ts' is not a module.


==== tests/cases/compiler/requireOfAnEmptyFile1_a.ts (1 errors) ====
    //requireOfAnEmptyFile1
    
    import fs = require('./requireOfAnEmptyFile1_b');
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2306: File 'tests/cases/compiler/requireOfAnEmptyFile1_b.ts' is not a module.
    
==== tests/cases/compiler/requireOfAnEmptyFile1_b.ts (0 errors) ====
    